--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -2,3 +2,18 @@ header{
     display: flex;
     justify-content: right;
 }
+
+.blogContainer{
+    background-color:antiquewhite;
+    padding: 0;
+    margin:0;
+    max-width: 50%;
+    min-width: 50%;
+    max-height: 20rem;
+    min-height: 20rem;
+    align-items: center;
+
+    p{
+        font-size: 16pt;
+    }
+}
