--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,11 +7,27 @@
     min-width: 100%;
     min-height: 20em;
     border:  2pt solid green;
+    display: inline-flex;
+    padding: 0;
+    margin:0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex-wrap: wrap;
 }
+
 
 .start-page{
     justify-items: center;
     
+}
+
+.blog-list-image{
+    width: 80%;
+    height: 80%;
+}
+
+.image-container{
+    justify-items: center;
 }
 
 .start-page-top{
@@ -54,11 +70,14 @@
 
  h2{
     color: #218b2f;
+    font-size: 26pt;
  }
 
  a{
     margin: 5pt;
+    color: green;
  }
+
 
  footer{
     background-image: url("../images/leaf.gif");
@@ -108,4 +127,8 @@
 
 #TitleTextbox{
     border: 2pt, solid, red;
+}
+
+select{
+    width: 50%;
 }
