--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="my-1 pt-4 pb-4 text-center create-container">
         <div style="background-color: rgb(255, 255, 255 ,0.5);">
             <h1 class="display-5 mb-1 fw-bold"><% if(window==='create'){%> Create a new Blog<%}else{%> Updating <%}%></h1>
-            <form id="blogForm" action="/" method="<%if(window==='create'){%>POST<%}else{%>PATCH<%}%>">
+            <form id="blogForm" action="/upload" method="<%if(window==='create'){%>POST<%}else{%>PATCH<%}%>" enctype="multipart/form-data">
                 <div class="input-container">
                     <label for="TitleTextbox"><span class="required-icon">*</span>Title</label>
                     <input required type="text" name="title" <% if(locals.title){%>value="<%=title%>" <%}%> id="TitleTextbox">
@@ -13,9 +13,14 @@
                     <label for="BlogText">Text</label>
                     <textarea id="BlogText" name="text"><%if(locals.text){%><%=text%><%}%> </textarea>
                 </div>
+                <%if(window=="create"){%>
+                    <div class="input-container">
+                        <input required type="file" accept="image/*" id="imageInput" name="image">
+                    </div>
+                <%}%>
                 <div class="col-lg-6 pb-2 mx-auto"> 
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                        <input class="btn btn-success" <%if(window==='create'){%>type="submit"<%}else{%>type="button" onclick="doPatch();"<%}%> value="Submit">
+                        <input class="btn btn-success" <%if(window==='create'){%>type="submit"<%}else{%>type="button" onclick="doPatch();"<%}%> value="Submit" onsubmit="return(validate())">
                     </div> 
                 </div> 
             </form>
@@ -28,14 +33,26 @@
         <img class="blog-photo" src="images/start.png">
         <h2>Blogs</h2>
     </div> 
-    <div class="overflow-hidden blog-container" style="max-height: 30vh;"> 
-        <div class="container px-5 blog-container" id="createdBlogConatianer">
+    <div class="blog-container" style="max-height: 30vh;">
             <%if(locals.blogData){%>
-                <%for(var i=0;i<blogData.length;i++){%>
-                    <a href="/update?title=<%=blogData[i]%>"><%=blogData[i]%></a>
+                <%for(const [key,value] of Object.entries(blogData)){%>
+                    <div class="container blogContainer"> 
+                        <div class="row flex-lg-row-reverse align-items-right g-5"> 
+                            <div class="col-10 col-sm-8 col-lg-6 align-content-center image-container">
+                                <% if(value.image){%>
+                                <img src="/image/<%=value.image%>" class="d-block img-fluid blog-list-image" alt="Bootstrap Themes" width="50%" height="300" loading="lazy">
+                                <%}else{%>
+                                <img src="images/vine.png" class="d-block img-fluid blog-list-image" alt="Bootstrap Themes" width="50%" height="300" loading="lazy">
+                                <%}%>
+                            </div> 
+                            <div class="col-lg-6 text-align-center align-content-center"> 
+                                <h2 class="fw-bold lh-1"><a href="/update?title=<%=key%>"><%=key%></a></h1> 
+                                <p class="lead"><%=value.text.slice(0,100)%></p> 
+                            </div> 
+                        </div> 
+                    </div>
                 <%}%>
             <%}%>
-        </div> 
     </div> 
 </div>
 <%}%>
@@ -60,6 +77,14 @@
             console.log('PATCH Response.status: ', response.status);
             window.location.href = "/";
         });
+    }
+    function validate(){
+        if($('#upload')[0].files.length === 0){
+        alert("You must set an image");
+        $('#upload').focus();
+
+        return false;
+    }
     }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
