--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,9 +31,9 @@
 <%}else{%>
 <div class="px-4 my-1 text-center border-bottom start-page"> 
     <div class="col-12 start-page-top"> 
-        <h1 class="display-4 fw-bold">Brians Blog About Suff</h1> 
+        <h1 class="display-4 fw-bold">Brian's Blog About Stuff</h1> 
         <img class="blog-photo" src="images/start.png">
-        <h2>Blogs</h2>
+        <h2 style="padding: 5pt;">Blogs</h2>
     </div> 
     <div class="blog-container" style="max-height: 30vh;">
             <%if(locals.blogData){%>
