--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -11,7 +11,7 @@ header{
     min-width: 50%;
     max-height: 20rem;
     min-height: 20rem;
-    align-items: center;
+    align-content: center;
 
     p{
         font-size: 16pt;
