--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,11 +1,11 @@
 .blog-photo{
-    max-width: 25rem;
-    max-height: 25rem;
+    max-width:30vh;
+    max-height: 30vh;
 }
 
 .blog-container{
     min-width: 100%;
-    min-height: 20em;
+    min-height: 20vh;
     border:  2pt solid green;
     display: inline-flex;
     padding: 0;
@@ -15,15 +15,21 @@
     flex-wrap: wrap;
 }
 
+#smallFooter{
+    display: none;
+}
 
 .start-page{
     justify-items: center;
-    
+    max-height: 80%;
+    height: 80%;
 }
 
 .blog-list-image{
-    width: 80%;
-    height: 80%;
+    /*width: 20vh;
+    height: 20vh;*/
+    min-width: 1vh;
+    min-height: 1vh;
 }
 
 .image-container{
@@ -34,6 +40,9 @@
     background-image: url("../images/fantasy-small.gif");
     background-repeat: no-repeat;
     background-size: cover;
+    max-height: 40vh;
+    height: 40vh;
+    min-height: 324px;
 }
 
 .create-container{
@@ -54,12 +63,11 @@
     margin-bottom: .5em;
  }
 
- input[type=text]{
-    min-width: 50vh;
+ input[type=file]{
+    text-align-last: center;
  }
+
  textarea{
-    min-width: 50vh;
-    min-height: 50vh;
     margin-left: 10pt;
     margin-right: 10pt;
  }
@@ -70,12 +78,12 @@
 
  h2{
     color: #218b2f;
-    font-size: 26pt;
  }
 
  a{
     margin: 5pt;
     color: green;
+    font-size: 3vw;
  }
 
 
@@ -89,7 +97,7 @@
 }
 
 .caption_email{
-    font-size: 2em;
+    font-size: 3vw;
     font-family: Italianno;
     color:#5b9e24;
     text-wrap: none;
@@ -141,4 +149,74 @@ header{
 
 body{
     background-color: green;
+    min-height: 600px;
+    min-width: 300px;
+}
+
+p{
+        font-size: 2vw;
+}
+
+.create-panel-inner{
+    width: 80%;
+}
+
+#normalFooter{
+    display: contents;
+}
+
+
+@media screen and (max-width:757px) {
+    .footer-icon{
+        display: none;
+    }
+}
+
+/*@media screen and (max-width:757px) {
+
+    #normalFooter{
+        display: none;
+    }
+
+    #smallFooter{
+        display: flex;
+    }
+
+    .blog-photo{
+        max-width:248px;
+        max-height: 248px;
+    }
+
+     .blog-list-image{
+        width: 50px;
+        height: 50px;
+    }
+
+    .blog-heading{
+        font-size: 12pt;
+    }
+
+    .blog-inner{    
+        display: flex;
+        margin: 0;
+    }
+
+    p{
+        font-size: 6pt;
+    }
+
+    .image-container{
+        width: fit-content;
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+
+    .row>*{
+        width: fit-content;
+    }
+
+    label{
+        font-size: 16pt;
+    }*/
 }
