--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,34 +1,65 @@
 <%-include("partials/header.ejs")%>
-<% if(locals.window){%>
-    <div class="my-1 pt-4 pb-4 text-center create-container">
+<div id="blogExpandedContainer">
+    <div id="blogExpandedBack"></div>
+    <div id="blogExpandedFrame">
+        <div class="my-1 pb-4 text-center">
         <div style="background-color: rgb(255, 255, 255 ,0.5);">
-            <h1 class="display-5 mb-1 fw-bold"><% if(window==='create'){%> Create a new Blog<%}else{%> Updating <%}%></h1>
-            <form id="blogForm" action="/upload" method="<%if(window==='create'){%>POST<%}else{%>PATCH<%}%>" enctype="multipart/form-data">
-                <div class="input-container">
-                    <label for="TitleTextbox"><span class="required-icon">*</span>Title</label>
-                    <input required type="text" name="title" <% if(locals.title){%>value="<%=title%>" <%}%> id="TitleTextbox" onchange="fixInput();" oninput="validateInput();">
-                    <p style="color: red;">Only characters,numbers, - , _ and spaces allowed for the title.</p>
-                    <div class="error" id="nameError">Please fill out this field.</div>
-                </div> 
-                <div>
-                    <label for="BlogText">Text</label>
-                    <textarea id="BlogText" name="text"><%if(locals.text){%><%=text%><%}%> </textarea>
-                </div>
-                <%if(window=="create"){%>
-                    <div class="input-container">
-                        <label for="imageInput"><span class="required-icon">*</span>Image</label>
-                        <input required type="file" accept="image/*" id="imageInput" name="image">
+            <div id="buttonPanel">
+                <button id="closeButton" onclick="hideMe()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                    </svg>
+                </button>
+            </div>
+            <button type="" id="editButton" onclick="editBlog()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                        <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                    </svg>
+                </button>
+                <button type="" id="deleteButton" onclick="doDelete(selected)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                    </svg>
+                </button>
+            <div id="blogInformationContainer">
+                <h1 id="blogInformationTitle">Title</h1>
+                <div id="textPanel">
+                     <p id="blogInformationText">Text</p>
+                </div>      
+                <form id="editForm">
+                    <div id="editFormText">
+                        <input type="text" name="title" class="title-input" id="editTitleInput">
+                        <hr style="color: green;">
+                        <textarea name="text" class="content-input" id="editContentInput"></textarea>
                     </div>
-                <%}%>
-                <div class="col-lg-6 pb-2 mx-auto"> 
-                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                        <input class="btn btn-success" type="button" <%if(window==='create'){%>onclick="doCreate();"<%}else{%>onclick="doPatch(<%=id%>);"<%}%> value="Submit" >
+                    <div id="editFormButton">
+                        <button class="btn btn-success" onclick="doPatch(selected)">Update</button>
                     </div> 
-                </div> 
-            </form>
+                </form>
+                <form id="createForm">
+                    <div id="createFormText">
+                        <label for="createTitleInput">Blog title</label>
+                        <input type="text" name="title" class="title-input" id="createTitleInput">
+                        <hr style="color: green;">
+                        <label for="createContentInput">Text</label>
+                        <textarea name="text" class="content-input" id="createContentInput"></textarea>
+                    </div>
+                    <div id="createImagePanel">
+                        <label>Picture</label>
+                        <p style="font-size: 12pt;">Current picture is path.png</p>
+                        <label for="createImageInput" style="font-size: 22pt;">Choose a image</label>
+                        <input required type="file" accept="image/*" id="createImageInput" name="image">
+                    </div>
+                    <div id="editFormButton">
+                        <button class="btn btn-success" onclick="doCreate()">Create</button>
+                    </div> 
+                </form>
+            </div>
         </div>
     </div>
-<%}else{%>
+    </div>
+</div>
 <div class="px-4 my-1 text-center border-bottom start-page"> 
     <div class="col-12 start-page-top"> 
         <h1 class="display-4 fw-bold">Brian's Blog About Stuff</h1> 
@@ -38,7 +69,7 @@
     <div class="blog-container" style="max-height: 30vh;">
             <%if(locals.blogData){%>
                 <%blogData.forEach(element => {%>
-                    <div class="container blogContainer"> 
+                    <div class="container blogContainer" <%if(true){%>onclick="expandBlog(<%=element.id%>);<%}%>"> 
                         <div class="row flex-row-reverse align-items-right g-5 blog-inner"> 
                             <div class="d-flex col-6 align-content-center image-container">
                                 <% if(element.image){%>
@@ -48,8 +79,8 @@
                                 <%}%>
                             </div> 
                             <div class="col-6 text-align-center align-content-center" style="padding: 0;"> 
-                                <h2 class="fw-bold lh-1 blog-heading"><a href="/update?id=<%=element.id%>"><%=element.title%></a></h1> 
-                                <p class=""><%=element.content.slice(0,100)%></p> 
+                                <h2 class="fw-bold lh-1 blog-heading"><%=element.title%></h2> 
+                                <p class=""><%=element.content%></p> 
                             </div> 
                         </div> 
                     </div>
@@ -57,7 +88,6 @@
             <%}%>
     </div> 
 </div>
-<%}%>
 <script src="client.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <%-include("partials/footer.ejs")%>
