--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,12 +85,11 @@
     <div class="col-12 start-page-top"> 
         <h1 class="display-4 fw-bold">Brian's Blog About Stuff</h1> 
         <img class="blog-photo" src="images/start.png">
-        <h2 style="padding: 5pt;">Blogs</h2>
     </div> 
-    <div class="blog-container" style="max-height: 30vh;">
+    <div class="blog-container">
             <%if(locals.blogData){%>
                 <%blogData.forEach(element => {%>
-                    <div class="container blogContainer" <%if(true){%>onclick="expandBlog(<%=element.id%>);<%}%>"> 
+                    <div class="container blogContainer col-6" <%if(true){%>onclick="expandBlog(<%=element.id%>);<%}%>"> 
                         <div class="row flex-row-reverse align-items-right g-5 blog-inner"> 
                             <div class="d-flex col-6 align-content-center image-container">
                                 <% if(element.image){%>
@@ -107,8 +106,8 @@
                     </div>
                 <%});%>
             <%}%>
-    </div> 
+    </div>
+    <%-include("partials/footer.ejs")%>
 </div>
 <script src="client.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-<%-include("partials/footer.ejs")%>
