--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+<div class="d-flex flex-wrap justify-content-between align-items-center my-4 border-top myfooter">
         <div id="normalFooter">
         <div class="col-md-4 d-flex align-items-center"> 
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1 footer-icon" aria-label="Controller icon"> 
@@ -10,7 +10,7 @@
             <span class="mb-md-0 caption_email">Brian Lamb</span>
         </div> 
         <span class=" mb-md-0 caption_email">bdlamb3220@yahoo.com</span>
-        <ul class="nav col-md-4 justify-content-end list-unstyled" style="display: contents;"> 
+        <ul class="d-flex nav col-md-4 justify-content-end list-unstyled"> 
             <li class="ms-3">
                 <a class="text-body-secondary" href="https://www.linkedin.com/in/brian-lamb-85840b2a4/" aria-label="LinkedIn">
                      <svg id="linkin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
@@ -27,4 +27,4 @@
             </li> 
         </ul>
         </div>
-    </footer>
+    </div>
