edited the toasts a little bit.  Some variables are now part of a env.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -125,6 +125,16 @@
     margin-left:1em;
 }
 
+.toast-body{
+    font-weight:bold;
+    font-size: 16pt;
+    text-align: center;
+}
+
+.tox-pop{
+    display: none;
+}
+
 .error {
         color: red;
         font-size: 0.9em;
