--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
 <%-include("partials/header.ejs")%>
-<div class="toast-container position-fixed top-0 end-0 p-3">
-  <div id="liveToast" class="toast bg-success" role="alert" data-bs-autohide="true" data-bs-delay="2000" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
+<div class="toast-container position-fixed top-10 end-0 p-3">
+  <div id="liveToast" class="toast" role="alert" data-bs-autohide="true" data-bs-delay="2000" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header bg-success">
     </div>
     <div class="toast-body">
       Hello, world! This is a toast message.
     </div>
   </div>
 </div>
-<div class="toast-container position-fixed top-0 end-0 p-3">
-  <div id="errorToast" class="toast bg-danger" role="alert" data-bs-autohide="true" data-bs-delay="2000" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
+<div class="toast-container position-fixed top-10 end-0 p-3">
+  <div id="errorToast" class="toast" role="alert" data-bs-autohide="true" data-bs-delay="2000" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header bg-danger">
     </div>
     <div class="toast-body">
       Hello, world! This is a toast message.
