--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
                 <form id="editForm">
                     <div id="editFormText">
                         <input type="text" name="title" class="title-input" id="editTitleInput">
-                        <hr style="color: green;">
+                        <hr>
                         <textarea name="text" class="content-input" id="editContentInput"></textarea>
                     </div>
                       <div id="editImagePanel">
@@ -69,7 +69,7 @@
                     <div id="createFormText">
                         <label for="createTitleInput">Blog title</label>
                         <input type="text" name="title" class="title-input" id="createTitleInput">
-                        <hr style="color: green;">
+                        <hr>
                         <label for="createContentInput">Text</label>
                         <textarea name="text" class="content-input" id="createContentInput"></textarea>
                     </div>
@@ -115,5 +115,6 @@
     </div>
     <%-include("partials/footer.ejs")%>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="client.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
